--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="container">
+<div class="add-item">
+  <button (click)="addItem()">add item</button>
+</div>
 
+<div class="container">
   <div class="item">
     <app-item></app-item>
   </div>
