--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,1 +1,5 @@
-<p>item works!</p>
+<div class="item-detail" *ngIf="item$ | async as item">
+  <div>
+      <img src="{{ item.url }}">
+  </div>
+</div>
