--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,35 @@
 .container {
   display: flex;
+  flex-direction: column;
 
-  .item {
-    flex: 1;
-    border: 1px solid;
+  .toolbar {
+    .side {
+      padding: 0 14px;
+    }
+    .example-spacer {
+      flex: 1 1 auto;
+    }
+    .btn-add-item {
+      background: #46a35e;
+    }
+
+    .search-item {
+      font-size: small;
+    }
   }
 
-  .item-list-table {
-    flex: 1;
+  .item-data {
+    display: flex;
+    padding: 32px 15px 0;
+    .item {
+      flex: 1;
+      margin: auto;
+    }
+
+    .item-list-table {
+      flex: 1;
+      border-left: 1px solid gray;
+    }
   }
+
 }
