--- a/src/app/item-list-table/item-list-table.component.html
+++ b/src/app/item-list-table/item-list-table.component.html
@@ -1,16 +1,11 @@
 <div class="item-list-table" >
-  <div class="search-product">
-    <mat-form-field>
-        <input matInput name="productName" [(ngModel)]="item" placeholder="asearch product">
-    </mat-form-field>
-</div>
-<!-- <label *ngIf="listItem.length == 0">No data to display</label> -->
-  <table mat-table [dataSource]="listItem  | search: item | paginate: { itemsPerPage: 5, currentPage: pageIndex }" matSort class="mat-elevation-z8">
+<label *ngIf="listItem.length == 0">No data to display</label>
 
+  <table mat-table  [dataSource]="listItem  | search: searchItem | paginate: { itemsPerPage: 5, currentPage: pageIndex }" matSort class="mat-elevation-z8">
     <ng-container matColumnDef="profile">
       <th mat-header-cell *matHeaderCellDef> Profile </th>
-      <td mat-cell *matCellDef="let element">
-        <img src="{{element.thumbnailUrl}}"></td>
+      <td  class="profile" mat-cell *matCellDef="let element">
+        <img class="img-profile" src="{{element.thumbnailUrl}}"></td>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -30,7 +25,7 @@
 
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef> Edit </th>
-      <mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element">
         <button mat-icon-button
         [satPopoverAnchor]="p" (click)="p.toggle()" >
         <mat-icon>edit</mat-icon>
@@ -40,21 +35,24 @@
           <app-edit-item [item]="element" ></app-edit-item>
         </div>
       </sat-popover>
-    </mat-cell>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef> Delete </th>
-      <mat-cell *matCellDef="let element"> <button mat-icon-button matTooltip="Click to Delete" class="iconbutton"
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button matTooltip="Click to Delete" class="iconbutton"
         (click)="removeItem(element)" color="warn">
         <mat-icon>delete</mat-icon>
-      </button> </mat-cell>
+      </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedItem(row)"></tr>
+    <tr class="mat-row-table" mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedItem(row)"></tr>
   </table>
 
+  </div>
   <div class="paginator">
     <mat-paginator
       [length]="listItem?.length"
@@ -62,6 +60,5 @@
       (page)="pageEvent($event)"
     >
     </mat-paginator>
-  </div>
 </div>
 
