--- a/src/app/popups/add-item/add-item.component.html
+++ b/src/app/popups/add-item/add-item.component.html
@@ -1,31 +1,34 @@
 <div class="add-item">
-  <h1>Add Item</h1>
-  <form class="example-form" #form="ngForm" >
-    <div>
+  <div class="header">
+    <h1>Add Item</h1>
+  </div>
+  <form class="form" #form="ngForm" >
+    <div class="field-profil">
       <mat-error  *ngIf="message">{{message}}</mat-error>
-      <input #file type="file"  name="thumbnailUrl" ngModel="thumbnailUrl"
+      <div>Image Profile</div>
+      <input #file type="file"  name="thumbnailUrl" [ngModel]="thumbnailUrl"
           accept='image/*' (change)="preview(file.files)" />
-        <img [src]="item.thumbnailUrl" (click)="file.click()">
+        <img class="image-profile" [src]="item.thumbnailUrl" (click)="file.click()">
     </div>
 
-    <div class="full-with">
+    <div>
       <mat-form-field class="col-6" appearance="fill">
         <mat-label>Name</mat-label>
         <input matInput type="text" name="title"  placeholder="Name" required  ngModel>
       </mat-form-field>
+      </div>
 
+    <div>
       <mat-form-field class="col-6"  appearance="fill">
           <mat-label>Album Id</mat-label>
           <input matInput type="number" name="albumId" placeholder="albumId" required ngModel>
         </mat-form-field>
     </div>
 
-    <div class="footer-btn">
+    <div class="btn-group">
       <button mat-raised-button class="btn-back" (click)="onNoClick()">Back To List
-        <mat-icon>keyboard_backspace</mat-icon>
       </button>
       <button mat-raised-button class="btn-add" type="submit" (click)="add(form)" [disabled]="!form.valid" >Add Item
-        <mat-icon>add</mat-icon>
       </button>
     </div>
   </form>
