--- a/src/app/item-list-table/item-list-table.component.scss
+++ b/src/app/item-list-table/item-list-table.component.scss
@@ -2,12 +2,11 @@
   th {
     width: 80px;
   }
-  td {
-    width: 40%;
-  }
   .profile {
     .img-profile {
       padding: 7px;
+      width: 150px;
+      height: 150px;
     }
   }
   .mat-row-table {
