--- a/src/app/popups/add-item/add-item.component.html
+++ b/src/app/popups/add-item/add-item.component.html
@@ -5,8 +5,8 @@
   <form class="form" #form="ngForm" >
     <div class="field-profil">
       <mat-error  *ngIf="message">{{message}}</mat-error>
-      <div>Image Profile</div>
-      <input #file type="file"  name="thumbnailUrl" [ngModel]="thumbnailUrl"
+      <div *ngIf="!item.thumbnailUrl" (click)="file.click()" class="box-iamge">Image Profile</div>
+      <input #file type="file" style="display: none;" name="thumbnailUrl" [(ngModel)]="thumbnailUrl"
           accept='image/*' (change)="preview(file.files)" />
         <img class="image-profile" [src]="item.thumbnailUrl" (click)="file.click()">
     </div>
@@ -15,6 +15,7 @@
       <mat-form-field class="col-6" appearance="fill">
         <mat-label>Name</mat-label>
         <input matInput type="text" name="title"  placeholder="Name" required  ngModel>
+        <mat-error *ngIf="form.controls['title']?.errors?.required"> Title is required.</mat-error>
       </mat-form-field>
       </div>
 
@@ -22,11 +23,12 @@
       <mat-form-field class="col-6"  appearance="fill">
           <mat-label>Album Id</mat-label>
           <input matInput type="number" name="albumId" placeholder="albumId" required ngModel>
+        <mat-error *ngIf="form.controls['albumId']?.errors?.required"> Album Id is required.</mat-error>
         </mat-form-field>
     </div>
 
     <div class="btn-group">
-      <button mat-raised-button class="btn-back" (click)="onNoClick()">Back To List
+      <button mat-raised-button class="btn-back" (click)="onNoClick()">Back
       </button>
       <button mat-raised-button class="btn-add" type="submit" (click)="add(form)" [disabled]="!form.valid" >Add Item
       </button>
