--- a/src/app/popups/add-item/add-item.component.scss
+++ b/src/app/popups/add-item/add-item.component.scss
@@ -15,6 +15,14 @@
         display: block;
         margin: auto;
       }
+
+      .box-iamge {
+        border: 1px dashed gray;
+        padding: 30px;
+        width: 60px;
+        text-align: center;
+        margin: auto;
+      }
     }
     .btn-group {
       display: flex;
