--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,3 +1,3 @@
 <div class="item-detail" *ngIf="item$ | async as item">
-  <img [src]="item.url" />
+  <img class="image-item" [src]="item.url ? item.url : item.thumbnailUrl" />
 </div>
